# poetry-az-func

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  function_app.py  host.json  main.tf  pyproject.toml  ruff.toml
.github/workflows/: cd.yml  ci.yml  main.yml
azure_functions/timeTrigger/: function_app.py
environments/dev/: terraform.tfvars
environments/prod/: terraform.tfvars
environments/staging/: terraform.tfvars
src/: __init__.py  main.py
src/optimization/: objective.py
src/utils/: args_parser.py  logging.py
tests/: test_main.py
